# resource/schema/sys-mst-role.js
@@ -1,0 +1,7 @@
+const { SysMstRoleModelDefine } = require("../models/sys-mst-role");
+
+const MasterRoleSchema = {
+  BodyMasterRoleSchema: SysMstRoleModelDefine,
+};
+
+module.exports = MasterRoleSchema;
